# learn-ros2

./: .gitignore  readme.md
billy/: Cargo.toml
billy/src/: main.rs
hello-world/: test.py
hello_world/: Cargo.toml
hello_world/src/: main.rs
myrobot_ws/: readme.md
myrobot_ws/install/: local_setup.sh  setup.sh
myrobot_ws/install/fishbot_description/lib/fishbot_description/: rotate_wheel
myrobot_ws/install/fishbot_description/share/fishbot_description/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
myrobot_ws/log/: latest_build
town_ws/sherlock/: Cargo.toml  readme.md
town_ws/sherlock/src/: main.rs
town_ws/src/bakerstreet/: package.xml  setup.cfg  setup.py
town_ws/src/bakerstreet/bakerstreet/: watson.py  watson_oop.py
town_ws/src/regent_park/: CMakeLists.txt  package.xml
town_ws/src/regent_park/src/: billy.cpp  billy_oop.cpp
transformation/: example.py  static-tf-pub.py  tf-listener.py  tf-pub.py  tf2-eg.py
watson/: Cargo.toml
watson/src/: main.rs
